log/build_2025-11-11_17-12-27/my_first_package/stderr.log
  File "/home/shcho/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/my_service_server.py", line 5
    from my_first_package _msgs.srv import MultiSpawn
                          ^^^^^
SyntaxError: invalid syntax

